fix: add a transparent border so the content does not jump on select tab or file.

--- a/app/styles/_diagrams.scss
+++ b/app/styles/_diagrams.scss
@@ -19,6 +19,11 @@
   border-style: inset;
 }
 
+.border-left-transparent {
+  border-left: 0.45rem solid transparent !important;
+  border-style: inset;
+}
+
 .width-full {
   width: 100%;
 }
